Removed unneeded files.
Updated pom to address Java 1.8 property javax.xml.accessExternalSchema.